# FYP_VolumetricVideo

./: .gitignore  .gitmodules
Renderer/: .gitignore  CMakeLists.txt
Renderer/cmake/: CMakeLists.txt  COPY_OPENGL_DLLS.cmake  COPY_REL_DIR.cmake  COPY_RS_DLLS.cmake
Renderer/include/RGBDStream/: FileRGBDStream.hpp  Frameset.hpp  RGBDStream.hpp  RealsenseRGBDStream.hpp
Renderer/include/calibration/: CharucoCalibration.hpp  StereoCalibrator.hpp
Renderer/include/glshared/: Point.hpp  RenderTexture.hpp  RenderedPoints.hpp  glcommon.hpp  shader.hpp
Renderer/lib/: CMakeLists.txt
Renderer/lib/glad/include/glad/: glad.h
Renderer/lib/glad/src/: glad.c
Renderer/lib/opencv/: setup_vars_opencv4.cmd
Renderer/lib/opencv/include/opencv2/: opencv_modules.hpp
Renderer/lib/opencv/include/opencv2/ximgproc/: disparity_filter.hpp
Renderer/lib/opencv/x64/vc18/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco4140.lib  opencv_aruco4140d.lib  opencv_bgsegm4140.lib  opencv_bgsegm4140d.lib  opencv_bioinspired4140.lib  opencv_bioinspired4140d.lib  opencv_calib3d4140.lib  opencv_calib3d4140d.lib  opencv_ccalib4140.lib  opencv_ccalib4140d.lib  opencv_core4140.lib  opencv_core4140d.lib  opencv_datasets4140.lib  opencv_datasets4140d.lib  opencv_dnn4140.lib  opencv_dnn4140d.lib  opencv_dnn_objdetect4140.lib  opencv_dnn_objdetect4140d.lib  opencv_dnn_superres4140.lib  opencv_dnn_superres4140d.lib  opencv_dpm4140.lib  opencv_dpm4140d.lib  opencv_features2d4140.lib  opencv_features2d4140d.lib  opencv_flann4140.lib  opencv_flann4140d.lib  opencv_fuzzy4140.lib  opencv_fuzzy4140d.lib  opencv_gapi4140.lib  opencv_gapi4140d.lib  opencv_hfs4140.lib  opencv_hfs4140d.lib  opencv_highgui4140.lib  opencv_highgui4140d.lib  opencv_img_hash4140.lib  opencv_img_hash4140d.lib  (+64 more)
Renderer/lib/small_gicp/small_gicp/registration/: termination_criteria.hpp
Renderer/src/: CMakeLists.txt
Renderer/src/RGBDStream/: CMakeLists.txt  FileRGBDStream.cpp  RealsenseRGBDStream.cpp  RealsenseStream.cpp
Renderer/src/RGBDStream/RGBDStream/: Frameset.hpp  RGBDStream.hpp  RGBDStreamGroup.hpp  RealsenseRGBDStream.hpp  RealsenseStream.hpp
Renderer/src/calibrate/: CMakeLists.txt  calibrate.cpp
Renderer/src/calibrate/frames/239622300610/: description.json
Renderer/src/calibrate/frames/241122306275/: description.json
Renderer/src/calibrated_pointcloud/: CMakeLists.txt  calibrated_pointcloud.cpp
Renderer/src/capture/: CMakeLists.txt  capture.cpp
Renderer/src/footage_pointcloud/: CMakeLists.txt  footage_pointcloud.cpp
Renderer/src/footage_pointcloud/frames/: description.json
Renderer/src/footage_pointcloud/shaders/: pointcloud.frag  pointcloud.vert
Renderer/src/glshared/: CMakeLists.txt  shader.cpp
Renderer/src/glshared/GLShared/: Point.hpp  shader.hpp
Renderer/src/main/: CMakeLists.txt  main.cpp
Renderer/src/pointcloud/: CMakeLists.txt  pointcloud.cpp
Renderer/src/pointcloud/shaders/: pointcloud.frag  pointcloud.vert
Renderer/src/processfootage/: CMakeLists.txt  processfootage.cpp
Scripts/: PlayBags.py  PreviewCalibration.py  RecordClip.py  UnwrapBags.py  cc.py  note.txt  test_detect.py
Scripts/frames/: description.json
opencv/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
opencv/include/opencv2/: cvconfig.h
opencv/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules.cmake  opencv_calib3d4130d.lib  opencv_core4130d.lib  opencv_dnn4130d.lib  opencv_features2d4130d.lib  opencv_flann4130d.lib  opencv_gapi4130d.lib  opencv_highgui4130d.lib  opencv_imgcodecs4130d.lib  opencv_imgproc4130d.lib  opencv_ml4130d.lib  opencv_objdetect4130d.lib  opencv_photo4130d.lib  opencv_stitching4130d.lib  opencv_video4130d.lib  opencv_videoio4130d.lib
